added geoLocation for both android & iOS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  geolocator: ^6.1.10
   flutter:
     sdk: flutter
+
 
   cupertino_icons: ^0.1.2
 
