--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  flutter_spinkit: "^4.1.2"
+  http: ^0.12.2
   geolocator: ^6.1.10
   flutter:
     sdk: flutter
